# canvas-cli

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  test_canvas.py
src/canvas_cli/: __init__.py  auth.py  canvas_client.py  models.py  server.py  server_fastmcp.py
src/canvas_cli/tools/: __init__.py  announcements.py  assignments.py  auth.py  bundle.py  conversations.py  courses.py  discussions.py  profile.py  schedule.py  structure.py
src/canvas_cli/utils/: __init__.py  ids.py  normalize_time.py  pagination.py  retry.py
tests/: __init__.py  conftest.py  test_models.py  test_pagination.py  test_tools_announcements.py  test_tools_assignments.py  test_tools_bundle.py  test_tools_courses.py  test_tools_discussions.py  test_tools_profile.py  test_tools_schedule.py  test_tools_structure.py
